fixed telegram bug

--- a/views/user/telegram.handlebars
+++ b/views/user/telegram.handlebars
@@ -10,7 +10,7 @@
     <li>Launch a chat session with Mominder by clicking on the image below<br>
       <figure>
         {{!-- <span> --}}
-        <a class="tele-figure" href="http://t.me/Mominder_robot" target="_blank"><img class="round-img"  src="/img/mom_125.jpg" /></a>
+        <a class="tele-figure" href="http://t.me/YourMom_robot" target="_blank"><img class="round-img"  src="/img/mom_125.jpg" /></a>
         <figcaption><i><a href="http://t.me/YourMom_robot" target="_blank">http://t.me/YourMom_robot</a></i></figcaption>
         {{!-- </span> --}}
       </figure>
