--- a/views/alert/crypto.handlebars
+++ b/views/alert/crypto.handlebars
@@ -80,10 +80,22 @@
       <label for="name">Title</label>
     </div>
   </div>
+  <p>
+   <label>
+     <input name="type1" type="radio" checked />
+     <span class="radio">Price Target <i><small>Mominder will alert you once your target price is met</small></i></span>
+   </label>
+ </p>
+ <p>
+   <label>
+     <input name="type1" type="radio" />
+     <span class="radio">% Change Target <i><small>Mominder will alert you once the price changes more than your specified %</small></i></span>
+   </label>
+ </p>
   <div class="row">
     <div class="input-field">
       <input id="name" type="text" name="name" value="" required>
-      <label for="name">Title</label>
+      <label for="name">Value</label>
     </div>
   </div>
   <div class="row">
