--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -297,3 +297,13 @@ a {
 .radio {
   color: #b71c1c;
 }
+
+#dropdown1 a {
+  color: white;
+}
+
+/* @media only screen and (min-width: 992px) {
+  #dropdown1 a {
+    color: white;
+  }
+} */
