fixed timezone to utc

--- a/views/alert/create.handlebars
+++ b/views/alert/create.handlebars
@@ -33,6 +33,8 @@
       </div>
     </div>
 
+    <input id="timezone" type="hidden" name="timezone" value="">
+
     <div class="row">
       <div class="input-field">
         <button class="red lighten-2 waves-effect waves-light btn" type="submit" name="action">Submit
