--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -14,7 +14,7 @@
         {{this.name}}
       </p>
       <p class="move-right">
-        {{this.display_time}}
+        {{this.alert_time}}
       </p>
     </div>
     <div class="row col s12 message-box">
