local datetime conversion

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -30,3 +30,5 @@
   <p><br></p>
 </div></div>
 {{/if}}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.0/moment-with-locales.min.js"></script>
+<script type="text/javascript" src="/js/datetime.js"></script>
